--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
 [context.production]
   environment = { NODE_VERSION = "14.16.0" }
+  [[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
