--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [context.production]
   environment = { NODE_VERSION = "14.16.0" }
-  [[headers]]
+[[headers]]
   for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
+[headers.values]
+  X-Frame-Options = "DENY"
+  X-XSS-Protection = "1; mode=block"
+  Referrer Policy: no-referrer
