--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@
 [headers.values]
   X-Frame-Options = "DENY"
   X-XSS-Protection = "1; mode=block"
-  Referrer Policy = "no-referrer"
+  Referrer-Policy = "no-referrer"
