--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,5 @@
 [headers.values]
   X-Frame-Options = "DENY"
   X-XSS-Protection = "1; mode=block"
-  Referrer-Policy = "no-referrer"
+  X-Content-Type-Options = "nosniff"
+  Referrer-Policy = "strict-origin-when-cross-origin"
