--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,4 @@
   X-XSS-Protection = "1; mode=block"
   X-Content-Type-Options = "nosniff"
   Referrer-Policy = "strict-origin-when-cross-origin"
+  Content-Security-Policy = "default-src https:"
