--- a/netlify.toml
+++ b/netlify.toml
@@ -8,5 +8,4 @@
   X-Content-Type-Options = "nosniff"
   Referrer-Policy = "strict-origin-when-cross-origin"
   Content-Security-Policy = "default-src https:"
-  Content-Security-Policy: script-src 'self'
-  Permissions-Policy: "fullscreen=(), geolocation=()"
+  Permissions-Policy = "fullscreen=(), geolocation=()"
